--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <div class="row">
                 <div class="col-12">
                     <h1>Please Enter Your Name</h1>
-                    <input id="name" type="text"/>
-                    <button onclick="display('sectionhome')"><span id="button">Click Here</span></button>
+                    <input id="visitors" type="text"/>
+                    <button onclick="display('sectionhome')" ><span onclick = "startbutton()" id="button">Click Here</span></button>
                     <p id="error" class="error"></p>
                 </div>
             </div>
